--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@import "https://fonts.googleapis.com/css?family=Open+Sans" ;
+@import "~@angular/material/prebuilt-themes/indigo-pink.css" ;
+
+.mat-tab-body-content {
+    padding-top: 20px;
+}
